# implementr

./: .gitignore  README.md
apps/backend/: pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/agents/: autonomous_agent.py  hybrid_implementation_agent.py  implementation_agent.py  research_graph.py  state.py
apps/backend/app/architecture/: architecture_reasoning_service.py  context_expander.py  execution_flow_service.py  repository_graph.py  repository_reasoner.py
apps/backend/app/auth/: clerk.py  current_user.py
apps/backend/app/blueprints/: implementation_blueprint_service.py
apps/backend/app/cache/: memory_cache.py
apps/backend/app/chat/: rag_chat_service.py
apps/backend/app/chunking/: base.py  text_chunker.py
apps/backend/app/code_embeddings/: code_embedding_model.py
apps/backend/app/code_ingestion/: code_chunker.py  ingestion_service.py  repository_analyzer.py  repository_scanner.py  symbol_constants.py  symbol_extractor.py
apps/backend/app/code_retrieval/: code_retrieval_service.py  retrieval_utils.py  symbol_retrieval_service.py
apps/backend/app/code_vectorstores/: code_vector_store.py  symbol_vector_store.py
apps/backend/app/concepts/: concept.py  concept_extractor.py  concept_index.py  concept_keywords.py  concept_matcher.py  concept_service.py  constants.py
apps/backend/app/core/: config.py  container.py  dependencies.py  logging.py
apps/backend/implementr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/scripts/: create_tables.py
apps/backend/tests/: test_qdrant.py
(+233 files in other folders)
