[project]
name = "implementr-backend"
version = "0.1.0"
description = "Production-grade AI research implementation assistant"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "feedparser",
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu",
    "numpy",
    "groq",
    "clerk-backend-api==6.0.1",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
