[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implementr-backend"
version = "0.1.0"
description = "Production-grade AI research implementation assistant"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "feedparser",
    "pymupdf",

    "torch==2.12.0",
    "transformers==5.9.0",
    "sentence-transformers==5.5.1",

    "faiss-cpu",
    "numpy",
    "groq",
    "clerk-backend-api==6.0.1",
    "sqlalchemy",
    "langgraph",
    "psycopg[binary]",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88